@@ -82,6 +82,7 @@ private Q_SLOTS:
     void slotPositionChanged(qint64 position);
     void slotDurationChanged(qint64 duration);
     void slotVolumeChanged(int volume);
+    void slotLoopToggled(bool loop);
     void slotPosition(int position);
     void slotPausePlay();
 
