@@ -48,4 +48,5 @@ BUGFIXES:
 031 ==> 244259 - Last image is displayed twice when Advanced Slideshow with KenBurns effect is run more than once.
 032 ==> 405043 - Add volume control to video playback.
 033 ==> 401253 - Face detect crashes every time.
-034 ==> 
+034 ==> 405042 - Ability to loop video playback.
+035 ==> 
